# text-to-mongo

./: .gitignore  ABSTRACT.md  ARCHITECTURE.md  EVAL.md  README.md  model_card.md  pyproject.toml  run_experiments.sh
data/: eval.jsonl  held_out.jsonl  train.jsonl
demos/dashboard/: README.md  config.json
notebooks/: text_to_mongo.ipynb
src/text_to_mongo/: prompt.py  schema.py
src/text_to_mongo/data/: README.md  augment.py  export.py  generator.py  intents.py  schemas.py
src/text_to_mongo/eval/: README.md  fields.py  generalization.py  harness.py  operators.py  syntax.py
src/text_to_mongo/serve/: README.md  app.py  models.py
src/text_to_mongo/training/: README.md  __init__.py  __main__.py  baseline.py  cli.py  compare.py  config.py  dataset.py  inference.py  trainer.py
tests/: test_chat_tool.py  test_data_generator.py  test_eval_fields.py  test_eval_operators.py  test_eval_syntax.py  test_training_config.py  test_training_dataset.py
tools/: README.md  app.py  chat.py  core.py
